# onejoker

./: .gitignore  CMakeLists.txt  CNAME  Makefile  README  README.md  _config.yml  arch_index.html  build.py  default.html  docs.textile  index.html  index.textile  installer.py  installer.pyw  oj-icon.xbm  params.json  structures.md  structures.textile
_layouts/: arch.html  cardlib.html  default.html  docs.html  index.html  min.html  randlib.html
cardlib/: build.html  build.textile  capi.html  capi.textile  capi_blackjack.html  capi_blackjack.textile  capi_cardlist.html  capi_cardlist.textile  capi_combiner.html  capi_combiner.textile  capi_examples.html  capi_examples.textile  capi_misc.html  capi_misc.textile  capi_poker.html  capi_poker.textile  capi_text.html  capi_text.textile  capi_types.html  capi_types.textile  cppapi.html  cppapi.textile  devel.html  devel.textile  examples-c.textile  examples-java.textile  examples-python.textile  index.html  index.textile  install.textile  javaapi.html  javaapi.textile  pythonapi.html  pythonapi.textile  representation.textile  structures.textile  use-c.textile  use-java.textile  use-python.textile  use.html  (+1 more)
docs/: build.textile  develop.textile  examples-c.textile  examples-java.textile  examples-python.textile  index.textile  install.textile  structures.md  structures.textile  use-c.textile  use-java.textile  use-python.textile  use.textile
downloads/: index.html  index.textile
java/: Makefile  com_onejoker_onejoker_CardContext.h  com_onejoker_onejoker_CardGame.h  com_onejoker_onejoker_CardList.h  com_onejoker_onejoker_Context.h  com_onejoker_onejoker_Game.h  jni.c  (+4 more)
src/lib/: .gitignore  CMakeLists.txt  Makefile  bctable.h  cardnames.c  combinatorics.c  ldctables.h  onejoker.c  onejoker.h  poker.c  pokertables.h  prng.c  sequence.c  text.c
src/tests/: .gitignore  CMakeLists.txt  Makefile  neweval.c  t_iters.c  t_sequence.c  test001.c  test002.c  test003.c  test004.c  test005.c  test_004.c  test_sequence.c
src/tests/test001/: CMakeLists.txt  test001.c
src/tests/test002/: CMakeLists.txt  test002.c
src/tests/test003/: CMakeLists.txt  test003.c
src/tests/test004/: CMakeLists.txt  test004.c
src/tests/test005/: CMakeLists.txt
(+134 files in other folders)
